new func to check imports